# cambak

./: .gitignore  .goreleaser.yaml  LICENSE  README.md  cambak.go  go.mod  go.sum  pyproject.toml
.github/workflows/: release.yml
cambak/: __init__.py  __main__.py  backup.py  scanner.py
cambak/cameras/: Sony.py  __init__.py
cmd/: extract.go  root.go  version.go
config/: main.go
files/: file.go  file_extensions.go  files.go  format.go
