[tool.poetry]
name = "cambak"
version = "0.1.1"
description = "Simple tool for automating the derushing process of your cameras"
authors = ["Michael Vieira <github@mvieira.fr>"]
license = "MIT"
repository = "https://github.com/Themimitoof/cambak.git"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
pycodestyle = "^2.5.0"

[tool.poetry.scripts]
cambak = 'cambak:main_cli'

[tool.black]
line-length = 79
skip-string-normalization = false
include = '\.py$'


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
